first successful build
zone.js version was installed to 0.3.4 for some reason, had to set to
0.7.4, 0.7.6 had bugs
added some 3 new components

--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Hello World!</h1>
+before main window2
+
+
+<me-main-window></me-main-window>
+<me-source-tree></me-source-tree>
+
+after main window8
