some testing, will most likely be undone

--- a/assets/app/app.component.html
+++ b/assets/app/app.component.html
@@ -1,7 +1,19 @@
-before main window2
+<div class="container-fluid">
+  
 
+<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+    <div class="container">
+        <a class="navbar-brand">Angular Router</a>
+        <ul class="nav navbar-nav" >
+            <li class="nav-item"><a class="nav-link" >Home</a></li>
+            <li class="nav-item"><a class="nav-link" >About</a></li>
+            <li class="nav-item"><a class="nav-link" >Courses</a></li>
+        </ul>
+    </div>
+</nav>
 
+<!--<router-outlet></router-outlet> -->
+<div class="row full-width-row">
 <me-main-window></me-main-window>
-<me-source-tree></me-source-tree>
-
-after main window8
+</div>
+</div>
